fix(home): sample image

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,12 @@
 <nav class="flex justify-around">
-  <a class="link dim black f4 mr3 helvetica"
+  <a class="link dim black f4 mr3 avenir"
      href="/portfolio.html">Portfolio</a>
-  <a class="link dim black f4 mr3 helvetica"
+  <a class="link dim black f4 mr3 avenir"
      href="/sketchbook.html">Sketchbook</a>
-  <a class="link dim black f4 mr3 helvetica"
+  <a class="link dim black f4 mr3 avenir"
      href="https://www.instagram.com/kyopi316/">Instragram</a>
-  <a class="link dim black f4 mr3 helvetica"
+  <a class="link dim black f4 mr3 avenir"
      href="/about.html">About</a>
-  <a class="link dim black f4 helvetica"
+  <a class="link dim black f4 avenir"
      href="/contact.html">Contact</a>
 </nav>
