--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,15 @@
 ---
 layout: default
 ---
-<div class="flex flex-column items-center">
-  <h1 class="f-5 helvetica ttu">karin yoshida</h1>
+<div class="vh-100 flex flex-column items-center">
+  <h1 class="f-5 helvetica ttu washed-green"
+      >karin yoshida</h1>
 
   {% include nav.html %}
+
+  <div class="h-100 flex items-center justify-center">
+    <img class="w-two-thirds"
+         src="{{ site.baseurl }}/assets/img/nudibranch.jpg"/>
+  </div>
 
 </div>
